# Isitgoingtohell

./: .gitignore  Dockerfile  LICENSE  README.md  Untitled-1.ipynb  anal_result.json  cache.json  config.toml  continents.geo.json  docker-compose.yaml  docker-compose.yml  dockerfile  items.json  items2.json  makefile  news_data.ipynb  next_stems.ipynb  next_steps.ipynb  only_codes.csv  pyproject.toml  result.json  run.sh
dags/: scraper_dag.py
isitgoingtohell/: analyze_sentiment.py  db_management.py  graph.py  items.json  label_analysis.py  main.py  run.py  run2.py  scrape_news.py  scrapy.cfg  statistics.py  utils.py
isitgoingtohell/bbc_scraper/: items.py  middlewares.py  pipelines.py  settings.py
isitgoingtohell/bbc_scraper/spiders/: bbc_spider.py
isitgoingtohell/data_management/: data_analysis.py  data_analysis2.py  db_management.py  db_management2.py  settings.py
isitgoingtohell/db_management/: db_management.py
isitgoingtohell/graph/: graph.py  graph2.py
isitgoingtohell/label_analysis/: label_analysis.py
isitgoingtohell/scrapers/: bbc_scraper.py  items.py  middlewares.py  pipelines.py  scrape_news.py  settings.py
isitgoingtohell/scrapers/spiders/: aljazeera_spider.py  bbc_spider.py  reuters_spider.py
isitgoingtohell/scraping/: items.py  pipelines.py  scrape_news.py
isitgoingtohell/scraping/spiders/: aljazeera_spider.py  bbc_spider.py  (+1 more)
isitgoingtohell/sentiment_analysis/: sentiment_analysis.py
isitgoingtohell/sentiment_analyzer/: sentiment_analysis.py
scraper_outputs/: AlJazeeraSpider.json  BbcSpider.json
sql/: create_news_table.sql
(+3 files in other folders)
