[tool.poetry]
name = "isitgoingtohell"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.0"
transformers = "^4.24.0"
toml = "^0.10.2"
scrapy = "^2.7.1"
psycopg2-binary = "^2.9.5"
plotly = "^5.11.0"
pandas = "^1.5.1"
nbformat = "^5.7.0"
plotly-express = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
