[tool.poetry]
name = "isitgoingtohell"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.0"
transformers = "4.24.0"
toml = "0.10.2"
scrapy = "2.7.1"
pandas = "1.5.1"
SQLAlchemy = "1.4.45"
psycopg2-binary = "2.9.5"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
